--- a/index.html
+++ b/index.html
@@ -3,79 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>DRAGON CHAT V20 🔥</title>
+    <title>SULTAN CHAT V21 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@800;900&display=swap');
-        :root { --fire: linear-gradient(90deg, #ff4b2b, #ff416c); --gold: #ffcc00; }
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
+        :root { --gold: #d4af37; --dark-glass: rgba(0, 0, 0, 0.85); --accent: #ff6a00; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         
-        body { background: #0a0000; color: #fff; overflow: hidden; height: 100vh; }
-        .fire-bg { position: fixed; inset: 0; background: radial-gradient(circle at top, #330000 0%, #000 100%); z-index: -1; }
+        body { background: #000; color: white; overflow: hidden; height: 100vh; }
+        .bg-overlay { position: fixed; inset: 0; background: url('https://i.ibb.co/L8N7pPr/stars-bg.jpg') center; background-size: cover; z-index: -2; opacity: 0.5; }
+        .stars { position: fixed; inset: 0; background: url('https://www.transparenttextures.com/patterns/stardust.png'); z-index: -1; animation: moveStars 100s linear infinite; }
+        @keyframes moveStars { from { background-position: 0 0; } to { background-position: 1000px 1000px; } }
 
-        /* الهيدر الناري */
-        .header {
-            height: 65px; background: rgba(20,0,0,0.9);
-            display: flex; align-items: center; justify-content: space-between;
-            padding: 0 15px; border-bottom: 3px solid #ff4b2b;
-            box-shadow: 0 0 20px rgba(255, 75, 43, 0.4);
-        }
+        /* الهيدر الملكي */
+        .header { height: 65px; background: var(--dark-glass); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; border-bottom: 2px solid var(--gold); box-shadow: 0 0 20px rgba(212, 175, 55, 0.3); z-index: 2000; position: relative; }
+        .h-btn { font-size: 26px; cursor: pointer; color: var(--gold); background: none; border: none; transition: 0.3s; }
+        .h-btn:hover { transform: scale(1.2); text-shadow: 0 0 10px var(--gold); }
 
-        /* نظام التنبيه العلوي */
-        #top-alert {
-            position: fixed; top: 70px; width: 90%; left: 5%;
-            background: var(--fire); color: white; padding: 8px;
-            border-radius: 10px; text-align: center; font-size: 12px;
-            display: none; z-index: 5000; animation: fadeInDown 0.5s;
-        }
+        /* القائمة اليمنى (المتصلين) */
+        .side-right { position: fixed; top: 65px; right: -280px; width: 280px; bottom: 85px; background: var(--dark-glass); border-left: 2px solid var(--gold); transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); z-index: 1500; overflow-y: auto; backdrop-filter: blur(10px); }
+        .side-right.open { right: 0; }
 
-        /* حاوية الشات */
-        #fire-chat {
-            height: calc(100vh - 150px); overflow-y: auto; padding: 15px;
-            display: flex; flex-direction: column; gap: 12px;
-        }
+        /* القائمة اليسرى (الملف الشخصي) */
+        .side-left { position: fixed; top: 65px; left: -300px; width: 300px; bottom: 85px; background: var(--dark-glass); border-right: 2px solid var(--gold); transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); z-index: 1500; overflow-y: auto; backdrop-filter: blur(10px); }
+        .side-left.open { left: 0; }
 
-        .dragon-msg {
-            background: rgba(40,0,0,0.6); border: 1px solid #440000;
-            padding: 12px; border-radius: 20px 20px 0 20px;
-            max-width: 80%; align-self: flex-start;
-            position: relative; animation: slideIn 0.3s forwards;
-        }
+        /* تصميم كروت المتصلين */
+        .user-item { display: flex; align-items: center; gap: 10px; padding: 12px; border-bottom: 1px solid rgba(212, 175, 55, 0.1); transition: 0.3s; }
+        .user-item:hover { background: rgba(212, 175, 55, 0.05); }
+        .u-status { width: 10px; height: 10px; background: #2ecc71; border-radius: 50%; box-shadow: 0 0 5px #2ecc71; }
 
-        .owner-border { border: 2px solid; border-image: linear-gradient(45deg, gold, red) 1; animation: glow 1s infinite alternate; }
+        /* منطقة الشات الرئيسية */
+        .main-chat { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
+        .msg-container { display: flex; gap: 12px; align-items: flex-end; animation: slideUp 0.3s ease; }
+        .msg-avatar { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--gold); padding: 2px; }
+        .msg-bubble { background: rgba(255,255,255,0.05); border: 1px solid rgba(212, 175, 55, 0.2); padding: 12px; border-radius: 15px 15px 0 15px; max-width: 75%; position: relative; backdrop-filter: blur(5px); }
+        .owner-msg { border-right: 4px solid var(--gold); background: rgba(212, 175, 55, 0.05); }
 
-        /* شريط الكتابة */
-        .footer {
-            height: 85px; background: #111; display: flex; align-items: center;
-            padding: 10px; gap: 10px; border-top: 2px solid #ff4b2b;
-        }
+        /* البروفايل الفخم (يسار) */
+        .profile-header { height: 120px; background: linear-gradient(to bottom, var(--gold), transparent); position: relative; }
+        .profile-img { width: 100px; height: 100px; border-radius: 50%; border: 4px solid #000; position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%); box-shadow: 0 0 20px var(--gold); }
+        .profile-info { margin-top: 60px; text-align: center; padding: 20px; }
 
-        #in { flex: 1; height: 45px; background: #222; border: 1px solid #444; border-radius: 10px; color: #fff; padding: 0 15px; outline: none; }
-        .btn-fire { background: var(--fire); border: none; width: 50px; height: 45px; border-radius: 10px; cursor: pointer; color: white; font-weight: 900; }
+        /* البار السفلي */
+        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 2px solid var(--gold); display: flex; align-items: center; padding: 0 15px; gap: 10px; z-index: 2000; }
+        #input-box { flex: 1; height: 45px; background: rgba(255,255,255,0.05); border: 1px solid #333; border-radius: 25px; color: white; padding: 0 20px; outline: none; transition: 0.3s; }
+        #input-box:focus { border-color: var(--gold); box-shadow: 0 0 10px rgba(212, 175, 55, 0.3); }
 
-        @keyframes glow { from { box-shadow: 0 0 5px gold; } to { box-shadow: 0 0 15px red; } }
-        @keyframes slideIn { from { opacity: 0; transform: translateX(50px); } to { opacity: 1; transform: translateX(0); } }
-        @keyframes fadeInDown { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
 
-<div class="fire-bg"></div>
-<div id="top-alert">🔥 انتبه: الإمبراطور علوش دخل إلى العرش 🔥</div>
+<div class="bg-overlay"></div>
+<div class="stars"></div>
 
 <div class="header">
-    <button onclick="clearChat()" style="background:none; border:none; color:#ff4b2b; font-size:20px;">🗑️</button>
-    <div style="font-weight: 900; font-size: 22px; color: var(--gold); text-shadow: 0 0 10px red;">DRAGON CHAT V20</div>
-    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:40px; border-radius:50%; border:2px solid gold;">
+    <button class="h-btn" onclick="toggleSide('side-l')">⚙️</button>
+    <div style="text-align: center;">
+        <div style="color:var(--gold); font-weight:900; font-size:20px; text-shadow: 0 0 10px gold;">ALLOSH ROYAL V21</div>
+        <div id="online-count" style="font-size:10px; color:#aaa;">المتصلين: جارِ التحميل...</div>
+    </div>
+    <button class="h-btn" onclick="toggleSide('side-r')">👥</button>
 </div>
 
-<div id="fire-chat"></div>
+<div id="side-r" class="side-right">
+    <div style="padding:20px; color:var(--gold); font-weight:900; border-bottom:1px solid #333;">المتصلين الآن</div>
+    <div id="users-list"></div>
+</div>
+
+<div id="side-l" class="side-left">
+    <div class="profile-header">
+        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="profile-img">
+    </div>
+    <div class="profile-info">
+        <h2 id="p-name">علوش</h2>
+        <p style="color:var(--gold);">الرتبة: إمبراطور الشات 👑</p>
+        <div style="display:flex; justify-content:space-around; margin-top:30px;">
+            <div><b style="color:var(--gold)">1.5k</b><br><small>نقاط</small></div>
+            <div><b style="color:var(--gold)">100</b><br><small>لفل</small></div>
+        </div>
+        <hr style="margin:30px 0; opacity:0.1;">
+        <button onclick="clearChat()" style="width:100%; padding:12px; background:rgba(255,0,0,0.1); border:1px solid red; color:red; border-radius:10px;">مسح السجلات 🧹</button>
+    </div>
+</div>
+
+<div class="main-chat" id="chat-box"></div>
 
 <div class="footer">
-    <button style="background:none; border:none; font-size:25px;">🐲</button>
-    <input type="text" id="in" placeholder="أطلق لهبك هنا..." onkeypress="if(event.key==='Enter') send()">
-    <button class="btn-fire" onclick="send()">إرسال</button>
+    <button class="h-btn" onclick="alert('متجر الهدايا قادم!')">🎁</button>
+    <input type="text" id="input-box" placeholder="تحدث يا إمبراطور..." onkeypress="if(event.key==='Enter') send()">
+    <button class="h-btn" style="color:var(--accent)" onclick="send()">🚀</button>
 </div>
 
 <script>
@@ -83,41 +102,64 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let me = { name: "علوش", rank: "إمبراطور 🔥" };
+    let me = {
+        id: "allosh_king",
+        name: "علوش",
+        avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
+        rank: "إمبراطور"
+    };
 
-    function send() {
-        let val = document.getElementById('in').value;
-        if(!val) return;
-        db.ref('dragon_msgs').push({
-            user: me.name,
-            text: val,
-            rank: me.rank,
-            isOwner: true
-        });
-        document.getElementById('in').value = "";
+    function toggleSide(id) {
+        let sideR = document.getElementById('side-r');
+        let sideL = document.getElementById('side-l');
+        if(id === 'side-r') { sideR.classList.toggle('open'); sideL.classList.remove('open'); }
+        else { sideL.classList.toggle('open'); sideR.classList.remove('open'); }
     }
 
-    db.ref('dragon_msgs').limitToLast(40).on('child_added', s => {
+    function send() {
+        let i = document.getElementById('input-box'); if(!i.value) return;
+        db.ref('msgs_v21').push({ sender: me.name, text: i.value, avatar: me.avatar, isOwner: true });
+        i.value = "";
+    }
+
+    // استقبال الرسائل
+    db.ref('msgs_v21').limitToLast(40).on('child_added', s => {
         let d = s.val();
-        let box = document.getElementById('fire-chat');
+        let box = document.getElementById('chat-box');
         let div = document.createElement('div');
-        div.className = "dragon-msg " + (d.isOwner ? "owner-border" : "");
+        div.className = "msg-container";
         div.innerHTML = `
-            <b style="color:var(--gold); font-size:12px;">${d.user} [${d.rank}]</b>
-            <div style="margin-top:5px;">${d.text}</div>
+            <img src="${d.avatar}" class="msg-avatar">
+            <div class="msg-bubble ${d.isOwner?'owner-msg':''}">
+                <b style="color:var(--gold); font-size:12px;">${d.sender}</b><br>${d.text}
+            </div>
         `;
         box.appendChild(div);
         box.scrollTop = box.scrollHeight;
     });
 
-    function clearChat() { if(confirm("هل تريد إخماد النيران ومسح الشات؟")) db.ref('dragon_msgs').remove(); }
+    // تحديث المتصلين (تجريبي)
+    db.ref('users_v21').on('value', s => {
+        let list = document.getElementById('users-list');
+        let h = ""; let count = 0;
+        s.forEach(u => {
+            count++;
+            let d = u.val();
+            h += `<div class="user-item">
+                    <div class="u-status"></div>
+                    <img src="${d.avatar}" style="width:35px; height:35px; border-radius:50%;">
+                    <b>${d.name}</b>
+                  </div>`;
+        });
+        list.innerHTML = h;
+        document.getElementById('online-count').innerText = `المتصلين: ${count}`;
+    });
 
-    // تنبيه دخول المالك
-    setTimeout(() => {
-        let alert = document.getElementById('top-alert');
-        alert.style.display = 'block';
-        setTimeout(() => alert.style.display = 'none', 4000);
-    }, 2000);
+    // تسجيل دخول المالك
+    db.ref('users_v21/'+me.id).set(me);
+    db.ref('users_v21/'+me.id).onDisconnect().remove();
+
+    function clearChat() { if(confirm("هل تريد مسح الشات؟")) db.ref('msgs_v21').remove(); }
 </script>
 </body>
 </html>
