--- a/index.html
+++ b/index.html
@@ -3,77 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH SHOP V40 👑</title>
+    <title>ALLOSH SUPREME V41 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --gold: #ffd700; --bg: #000; --shop-bg: rgba(20, 20, 30, 0.95); }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+        :root { --gold: #ffd700; --bg: #000; --panel: rgba(10, 10, 15, 0.98); }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s; }
         
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
-        /* نافذة اليوتيوب المربعة الصغيرة */
-        #yt-win { position: fixed; top: 70px; left: 10px; width: 160px; background: #111; border: 2px solid var(--gold); border-radius: 12px; z-index: 5000; display: none; }
+        /* نافذة اليوتيوب العائمة (مربعة وصغيرة) */
+        #yt-win { position: fixed; top: 75px; left: 10px; width: 160px; background: #000; border: 2px solid var(--gold); border-radius: 12px; z-index: 5000; display: none; overflow: hidden; }
         .win-bar { background: var(--gold); color: #000; padding: 4px; display: flex; justify-content: space-between; font-size: 10px; font-weight: 900; }
 
-        /* الهيدر */
+        /* الهيدر الملكي */
         .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 2000; }
-        #gold-display { color: var(--gold); background: #1a1a1a; padding: 5px 12px; border-radius: 20px; border: 1px solid #333; font-size: 14px; }
+        .gold-pill { color: var(--gold); background: #1a1a1a; padding: 4px 10px; border-radius: 15px; border: 1px solid #333; font-size: 12px; }
 
-        /* نافذة المتجر (المربعة) */
-        #shop-win { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 280px; background: var(--shop-bg); border: 2px solid var(--gold); border-radius: 20px; z-index: 7000; display: none; padding: 15px; text-align: center; backdrop-filter: blur(10px); }
-        .shop-item { background: rgba(255,255,255,0.05); padding: 10px; border-radius: 10px; margin: 8px 0; display: flex; justify-content: space-between; align-items: center; border: 1px solid #333; }
-        .buy-btn { background: var(--gold); color: black; border: none; padding: 4px 10px; border-radius: 5px; font-weight: 900; cursor: pointer; }
+        /* القوائم الجانبية (تمت إعادتها) */
+        .side-panel { position: fixed; top: 65px; bottom: 85px; width: 260px; background: var(--panel); border: 1px solid rgba(255,215,0,0.2); z-index: 1500; backdrop-filter: blur(10px); }
+        #panel-r { right: -270px; border-radius: 20px 0 0 20px; }
+        #panel-l { left: -270px; border-radius: 0 20px 20px 0; }
+        .side-panel.active { right: 0 !important; left: 0 !important; }
+
+        /* نافذة المتجر */
+        #shop-win { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 280px; background: var(--panel); border: 2px solid var(--gold); border-radius: 20px; z-index: 7000; display: none; padding: 20px; text-align: center; }
+        .shop-item { background: rgba(255,255,255,0.05); padding: 10px; border-radius: 10px; margin: 8px 0; display: flex; justify-content: space-between; align-items: center; }
 
         /* الشات */
-        #chat-scroller { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
-        .msg { display: flex; gap: 10px; align-items: flex-end; animation: pop 0.3s; }
-        @keyframes pop { from { transform: scale(0.9); opacity: 0; } }
-        .pfp { width: 45px; height: 45px; border-radius: 12px; border: 2px solid #222; }
-        .bubble { background: rgba(255,255,255,0.07); padding: 10px 15px; border-radius: 15px; max-width: 75%; border: 1px solid #333; position: relative; }
-        
+        #chat-scroller { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; background: radial-gradient(circle, #111 0%, #000 100%); }
+        .msg { display: flex; gap: 10px; align-items: flex-end; animation: slideIn 0.3s ease; }
+        @keyframes slideIn { from { opacity: 0; transform: translateY(10px); } }
+        .pfp { width: 42px; height: 42px; border-radius: 10px; border: 1px solid var(--gold); }
+        .bubble { background: rgba(255,255,255,0.06); padding: 10px 15px; border-radius: 15px; max-width: 78%; border: 1px solid #222; }
+
         /* البار السفلي */
-        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #1a1a1a; display: flex; align-items: center; padding: 0 10px; gap: 8px; }
+        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #1a1a1a; display: flex; align-items: center; padding: 0 10px; gap: 8px; z-index: 2000; }
         #msg-in { flex: 1; height: 45px; background: #0d0d0d; border: 1px solid #333; border-radius: 10px; color: #fff; padding: 0 12px; }
-        .send-btn { background: var(--gold); border: none; padding: 10px 20px; border-radius: 10px; font-weight: 900; cursor: pointer; }
+        .btn-send { background: var(--gold); border: none; padding: 10px 18px; border-radius: 10px; font-weight: 900; cursor: pointer; }
     </style>
 </head>
 <body>
 
 <div id="yt-win">
-    <div class="win-bar"><span>YOUTUBE</span><button onclick="document.getElementById('yt-win').style.display='none'" style="border:none; background:none;">X</button></div>
+    <div class="win-bar"><span>YOUTUBE</span><button onclick="closeYT()">X</button></div>
     <div id="yt-content"></div>
 </div>
 
 <div id="shop-win">
-    <h3 style="color:var(--gold); margin-bottom:10px;">🛒 المتجر الملكي</h3>
-    <div class="shop-item">
-        <span>اسم أحمر نيون</span>
-        <button class="buy-btn" onclick="buy('color', '#ff0044', 500)">500 💰</button>
-    </div>
-    <div class="shop-item">
-        <span>لقب [ أسطورة ]</span>
-        <button class="buy-btn" onclick="buy('title', 'أسطورة', 1000)">1000 💰</button>
-    </div>
-    <div class="shop-item">
-        <span>اسم أخضر زمردي</span>
-        <button class="buy-btn" onclick="buy('color', '#00ff88', 500)">500 💰</button>
-    </div>
-    <button onclick="document.getElementById('shop-win').style.display='none'" style="margin-top:10px; color:grey; background:none; border:none;">إغلاق</button>
+    <h3 style="color:var(--gold)">🛍️ المتجر الملكي</h3>
+    <div class="shop-item"><span>لقب [ أسطورة ]</span><button onclick="buy('title','أسطورة',1000)" style="background:var(--gold); border:none; padding:3px 8px; border-radius:5px;">1000💰</button></div>
+    <div class="shop-item"><span>لون نيون</span><button onclick="buy('color','#00f2ff',500)" style="background:var(--gold); border:none; padding:3px 8px; border-radius:5px;">500💰</button></div>
+    <button onclick="toggleWin('shop-win')" style="margin-top:15px; color:red; background:none; border:none;">إغلاق</button>
 </div>
 
 <div class="header">
-    <button onclick="document.getElementById('shop-win').style.display='block'" style="background:none; border:none; font-size:24px;">🛒</button>
-    <b style="color:var(--gold)">ALLOSH V40</b>
-    <div id="gold-display">💰 0</div>
+    <button onclick="toggleSide('panel-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
+    <div style="text-align:center;"><b style="color:var(--gold)">ALLOSH V41</b><br><span id="gold-count" class="gold-pill">💰 0</span></div>
+    <button onclick="toggleSide('panel-r')" style="background:none; border:none; font-size:24px;">👥</button>
+</div>
+
+<div id="panel-r" class="side-panel">
+    <div style="padding:20px; color:var(--gold); border-bottom:1px solid #222;">رادار المملكة</div>
+    <div id="online-list" style="padding:15px;"></div>
+</div>
+
+<div id="panel-l" class="side-panel">
+    <div style="padding:30px; text-align:center;">
+        <img id="my-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; border-radius:15px; border:2px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
+        <input type="file" id="f" hidden onchange="updateMe(this)">
+        <h3 id="my-name-display" style="margin:10px 0;">علوش</h3>
+        <button onclick="toggleWin('shop-win')" style="width:100%; padding:12px; background:var(--gold); color:black; border:none; border-radius:10px; font-weight:900; margin-bottom:10px;">دخول المتجر 🛒</button>
+        <button onclick="db.ref('supreme_v41').remove()" style="width:100%; padding:10px; background:none; border:1px solid red; color:red; border-radius:10px;">تصفير الشات 🧹</button>
+    </div>
 </div>
 
 <div id="chat-scroller"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="اكتب واجمع الذهب..." onkeypress="if(event.key==='Enter') push()">
-    <button class="send-btn" onclick="push()">🚀</button>
+    <button onclick="toggleSide('panel-l')" style="background:none; border:none; font-size:22px;">🎭</button>
+    <input type="text" id="msg-in" placeholder="اكتب واكسب الذهب..." onkeypress="if(event.key==='Enter') push()">
+    <button class="btn-send" onclick="push()">إرسال</button>
 </div>
 
 <script>
@@ -83,66 +94,4 @@
 
     let me = { 
         name: "علوش", 
-        avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
-        gold: parseInt(localStorage.getItem('gold')) || 0,
-        color: localStorage.getItem('userColor') || '#ffd700',
-        title: localStorage.getItem('userTitle') || 'عضو'
-    };
-
-    function updateHeader() {
-        document.getElementById('gold-display').innerText = "💰 " + me.gold;
-    }
-
-    function buy(type, value, price) {
-        if(me.gold >= price) {
-            me.gold -= price;
-            if(type === 'color') { me.color = value; localStorage.setItem('userColor', value); }
-            if(type === 'title') { me.title = value; localStorage.setItem('userTitle', value); }
-            localStorage.setItem('gold', me.gold);
-            updateHeader();
-            alert("مبروك! تم الشراء بنجاح 🎉");
-        } else {
-            alert("ذهبك لا يكفي يا بطل! استمر بالكتابة 💰");
-        }
-    }
-
-    function push() {
-        let i = document.getElementById('msg-in'); if(!i.value) return;
-        me.gold += 10;
-        localStorage.setItem('gold', me.gold);
-        updateHeader();
-        db.ref('market_v40').push({ u: me.name, t: i.value, a: me.avatar, g: me.gold, c: me.color, title: me.title });
-        i.value = "";
-    }
-
-    function getYTID(url) {
-        let match = url.match(/^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/);
-        return (match && match[2].length === 11) ? match[2] : null;
-    }
-
-    db.ref('market_v40').limitToLast(30).on('child_added', s => {
-        let d = s.val();
-        let ytID = getYTID(d.t);
-        if(ytID) {
-            document.getElementById('yt-win').style.display = 'block';
-            document.getElementById('yt-content').innerHTML = `<iframe width="100%" height="120" src="https://www.youtube.com/embed/${ytID}" frameborder="0" allowfullscreen></iframe>`;
-        }
-
-        let sc = document.getElementById('chat-scroller');
-        let div = document.createElement('div');
-        div.className = "msg";
-        div.innerHTML = `
-            <img src="${d.a}" class="pfp">
-            <div class="bubble">
-                <span style="font-size:9px; background:#333; padding:2px 5px; border-radius:4px; color:var(--gold)">${d.title}</span> 
-                <b style="color:${d.c}; font-size:12px;">${d.u}</b><br>
-                <span>${d.t}</span>
-            </div>`;
-        sc.appendChild(div);
-        sc.scrollTop = sc.scrollHeight;
-    });
-
-    updateHeader();
-</script>
-</body>
-</html>
+        avatar: "https://cdn-icons-
