--- a/index.html
+++ b/index.html
@@ -3,88 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH SUPREME V41 👑</title>
+    <title>ALLOSH SUPREME V42 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --gold: #ffd700; --bg: #000; --panel: rgba(10, 10, 15, 0.98); }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s; }
+        :root { --gold: #ffd700; --bg: #000; --panel-bg: rgba(15, 15, 20, 0.98); }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
         
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
-        /* نافذة اليوتيوب العائمة (مربعة وصغيرة) */
-        #yt-win { position: fixed; top: 75px; left: 10px; width: 160px; background: #000; border: 2px solid var(--gold); border-radius: 12px; z-index: 5000; display: none; overflow: hidden; }
-        .win-bar { background: var(--gold); color: #000; padding: 4px; display: flex; justify-content: space-between; font-size: 10px; font-weight: 900; }
+        /* نافذة اليوتيوب المربعة الصغيرة */
+        #yt-win { position: fixed; top: 75px; left: 10px; width: 170px; background: #000; border: 2px solid var(--gold); border-radius: 12px; z-index: 5000; display: none; overflow: hidden; box-shadow: 0 0 15px var(--gold); }
+        .win-bar { background: var(--gold); color: #000; padding: 4px 10px; display: flex; justify-content: space-between; font-size: 10px; font-weight: 900; }
 
-        /* الهيدر الملكي */
-        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 2000; }
-        .gold-pill { color: var(--gold); background: #1a1a1a; padding: 4px 10px; border-radius: 15px; border: 1px solid #333; font-size: 12px; }
+        /* الهيدر */
+        .header { height: 65px; background: #050505; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 2000; }
+        .gold-stat { color: var(--gold); font-size: 14px; font-weight: 900; }
 
-        /* القوائم الجانبية (تمت إعادتها) */
-        .side-panel { position: fixed; top: 65px; bottom: 85px; width: 260px; background: var(--panel); border: 1px solid rgba(255,215,0,0.2); z-index: 1500; backdrop-filter: blur(10px); }
-        #panel-r { right: -270px; border-radius: 20px 0 0 20px; }
-        #panel-l { left: -270px; border-radius: 0 20px 20px 0; }
-        .side-panel.active { right: 0 !important; left: 0 !important; }
+        /* القوائم الجانبية */
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: var(--panel-bg); z-index: 3000; padding-top: 20px; backdrop-filter: blur(15px); border-right: 1px solid rgba(255,215,0,0.2); }
+        #side-r { right: -285px; } #side-l { left: -285px; border-right: none; border-left: 1px solid rgba(255,215,0,0.2); }
+        .side.active { right: 0 !important; left: 0 !important; }
 
-        /* نافذة المتجر */
-        #shop-win { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 280px; background: var(--panel); border: 2px solid var(--gold); border-radius: 20px; z-index: 7000; display: none; padding: 20px; text-align: center; }
-        .shop-item { background: rgba(255,255,255,0.05); padding: 10px; border-radius: 10px; margin: 8px 0; display: flex; justify-content: space-between; align-items: center; }
+        /* ستايل الميزات داخل القائمة اليسرى */
+        .feature-box { background: rgba(255,255,255,0.03); border: 1px solid #222; border-radius: 12px; margin: 10px; padding: 15px; }
+        .feature-title { color: var(--gold); font-size: 13px; margin-bottom: 10px; border-bottom: 1px solid #333; padding-bottom: 5px; }
+        .btn-action { width: 100%; padding: 8px; background: var(--gold); color: #000; border: none; border-radius: 8px; font-weight: 900; cursor: pointer; margin-top: 5px; font-size: 12px; }
 
         /* الشات */
-        #chat-scroller { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; background: radial-gradient(circle, #111 0%, #000 100%); }
-        .msg { display: flex; gap: 10px; align-items: flex-end; animation: slideIn 0.3s ease; }
-        @keyframes slideIn { from { opacity: 0; transform: translateY(10px); } }
-        .pfp { width: 42px; height: 42px; border-radius: 10px; border: 1px solid var(--gold); }
-        .bubble { background: rgba(255,255,255,0.06); padding: 10px 15px; border-radius: 15px; max-width: 78%; border: 1px solid #222; }
+        #chat-scroller { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .msg { display: flex; gap: 10px; align-items: flex-end; animation: slideUp 0.3s; }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } }
+        .pfp { width: 40px; height: 40px; border-radius: 8px; border: 1px solid var(--gold); }
+        .bubble { background: rgba(255,255,255,0.06); padding: 10px 12px; border-radius: 15px; max-width: 80%; border: 1px solid #1a1a1a; }
 
         /* البار السفلي */
-        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #1a1a1a; display: flex; align-items: center; padding: 0 10px; gap: 8px; z-index: 2000; }
-        #msg-in { flex: 1; height: 45px; background: #0d0d0d; border: 1px solid #333; border-radius: 10px; color: #fff; padding: 0 12px; }
-        .btn-send { background: var(--gold); border: none; padding: 10px 18px; border-radius: 10px; font-weight: 900; cursor: pointer; }
+        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #111; display: flex; align-items: center; padding: 0 10px; gap: 8px; }
+        #msg-in { flex: 1; height: 45px; background: #0d0d0d; border: 1px solid #222; border-radius: 10px; color: #fff; padding: 0 12px; }
     </style>
 </head>
 <body>
 
 <div id="yt-win">
-    <div class="win-bar"><span>YOUTUBE</span><button onclick="closeYT()">X</button></div>
-    <div id="yt-content"></div>
-</div>
-
-<div id="shop-win">
-    <h3 style="color:var(--gold)">🛍️ المتجر الملكي</h3>
-    <div class="shop-item"><span>لقب [ أسطورة ]</span><button onclick="buy('title','أسطورة',1000)" style="background:var(--gold); border:none; padding:3px 8px; border-radius:5px;">1000💰</button></div>
-    <div class="shop-item"><span>لون نيون</span><button onclick="buy('color','#00f2ff',500)" style="background:var(--gold); border:none; padding:3px 8px; border-radius:5px;">500💰</button></div>
-    <button onclick="toggleWin('shop-win')" style="margin-top:15px; color:red; background:none; border:none;">إغلاق</button>
+    <div class="win-bar"><span>YOUTUBE PLAYER</span><button onclick="document.getElementById('yt-win').style.display='none'" style="border:none; background:none; font-weight:900;">X</button></div>
+    <div id="yt-player"></div>
 </div>
 
 <div class="header">
-    <button onclick="toggleSide('panel-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
-    <div style="text-align:center;"><b style="color:var(--gold)">ALLOSH V41</b><br><span id="gold-count" class="gold-pill">💰 0</span></div>
-    <button onclick="toggleSide('panel-r')" style="background:none; border:none; font-size:24px;">👥</button>
+    <button onclick="toggleSide('side-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
+    <div style="text-align:center"><b style="color:var(--gold)">ALLOSH ELITE V42</b><br><span class="gold-stat" id="g-count">💰 0</span></div>
+    <button onclick="toggleSide('side-r')" style="background:none; border:none; font-size:24px;">👥</button>
 </div>
 
-<div id="panel-r" class="side-panel">
-    <div style="padding:20px; color:var(--gold); border-bottom:1px solid #222;">رادار المملكة</div>
-    <div id="online-list" style="padding:15px;"></div>
+<div id="side-r" class="side">
+    <h3 style="padding:15px; color:var(--gold)">الرادار الملكي</h3>
+    <div id="online-list" style="padding:10px;"></div>
 </div>
 
-<div id="panel-l" class="side-panel">
-    <div style="padding:30px; text-align:center;">
-        <img id="my-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; border-radius:15px; border:2px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
-        <input type="file" id="f" hidden onchange="updateMe(this)">
-        <h3 id="my-name-display" style="margin:10px 0;">علوش</h3>
-        <button onclick="toggleWin('shop-win')" style="width:100%; padding:12px; background:var(--gold); color:black; border:none; border-radius:10px; font-weight:900; margin-bottom:10px;">دخول المتجر 🛒</button>
-        <button onclick="db.ref('supreme_v41').remove()" style="width:100%; padding:10px; background:none; border:1px solid red; color:red; border-radius:10px;">تصفير الشات 🧹</button>
+<div id="side-l" class="side">
+    <div style="text-align:center; padding:10px;">
+        <img id="me-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:70px; border-radius:10px; border:2px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
+        <input type="file" id="f" hidden onchange="updateP(this)">
+        <h4 id="me-name" style="margin-top:5px;">الإمبراطور علوش</h4>
     </div>
+
+    <div class="feature-box">
+        <div class="feature-title">🎲 مراهنات الذهب</div>
+        <p style="font-size:10px; color:#aaa; margin-bottom:5px;">راهن بـ 100 ذهبة وتوقع (فوق/تحت 50)</p>
+        <div style="display:flex; gap:5px;">
+            <button class="btn-action" onclick="bet('high')">فوق 50</button>
+            <button class="btn-action" onclick="bet('low')" style="background:#555; color:white;">تحت 50</button>
+        </div>
+    </div>
+
+    <div class="feature-box">
+        <div class="feature-title">🛒 المتجر الملكي</div>
+        <button class="btn-action" onclick="buy('color','#ff00ff')">اسم بنفسجي (500💰)</button>
+        <button class="btn-action" onclick="buy('title','الملك')" style="background:#00f2ff;">لقب الملك (1000💰)</button>
+    </div>
+
+    <button onclick="db.ref('supreme_v42').remove()" style="color:red; background:none; border:none; width:100%; margin-top:20px; font-size:12px;">تصفير السجلات 🧹</button>
 </div>
 
 <div id="chat-scroller"></div>
 
 <div class="footer">
-    <button onclick="toggleSide('panel-l')" style="background:none; border:none; font-size:22px;">🎭</button>
-    <input type="text" id="msg-in" placeholder="اكتب واكسب الذهب..." onkeypress="if(event.key==='Enter') push()">
-    <button class="btn-send" onclick="push()">إرسال</button>
+    <button onclick="toggleSide('side-l')" style="background:none; border:none; font-size:24px;">💎</button>
+    <input type="text" id="msg-in" placeholder="اكتب لتربح الذهب..." onkeypress="if(event.key==='Enter') push()">
+    <button onclick="push()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:10px; font-weight:900;">إرسال</button>
 </div>
 
 <script>
@@ -93,5 +100,89 @@
     const db = firebase.database();
 
     let me = { 
-        name: "علوش", 
-        avatar: "https://cdn-icons-
+        name: "علوش", avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
+        gold: parseInt(localStorage.getItem('gold')) || 100,
+        color: localStorage.getItem('c') || '#ffd700',
+        title: localStorage.getItem('t') || 'عضو'
+    };
+
+    function toggleSide(id) {
+        document.querySelectorAll('.side').forEach(s => { if(s.id !== id) s.classList.remove('active'); });
+        document.getElementById(id).classList.toggle('active');
+    }
+
+    function updateStats() {
+        document.getElementById('g-count').innerText = "💰 " + me.gold;
+        localStorage.setItem('gold', me.gold);
+    }
+
+    // نظام المراهنات
+    function bet(type) {
+        if(me.gold < 100) return alert("رصيدك أقل من 100 ذهبة!");
+        me.gold -= 100;
+        let num = Math.floor(Math.random() * 100) + 1;
+        let win = (type === 'high' && num > 50) || (type === 'low' && num <= 50);
+        
+        if(win) {
+            me.gold += 250;
+            alert("مبروك! الرقم كان " + num + ". ربحت 250 ذهبة! 🎉");
+        } else {
+            alert("للأسف! الرقم كان " + num + ". خسرت المراهنة! 💀");
+        }
+        updateStats();
+    }
+
+    function buy(type, val) {
+        let price = type === 'color' ? 500 : 1000;
+        if(me.gold >= price) {
+            me.gold -= price;
+            if(type === 'color') { me.color = val; localStorage.setItem('c', val); }
+            else { me.title = val; localStorage.setItem('t', val); }
+            updateStats();
+            alert("تم الشراء بنجاح!");
+        } else alert("ذهبك لا يكفي!");
+    }
+
+    function push() {
+        let i = document.getElementById('msg-in'); if(!i.value) return;
+        me.gold += 10; updateStats();
+        db.ref('supreme_v42').push({ u: me.name, t: i.value, a: me.avatar, c: me.color, title: me.title });
+        i.value = "";
+    }
+
+    function getYTID(url) {
+        let match = url.match(/^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/);
+        return (match && match[2].length === 11) ? match[2] : null;
+    }
+
+    db.ref('supreme_v42').limitToLast(30).on('child_added', s => {
+        let d = s.val();
+        let ytID = getYTID(d.t);
+        if(ytID) {
+            document.getElementById('yt-win').style.display = 'block';
+            document.getElementById('yt-player').innerHTML = `<iframe width="100%" height="130" src="https://www.youtube.com/embed/${ytID}" frameborder="0" allowfullscreen></iframe>`;
+        }
+        let area = document.getElementById('chat-scroller');
+        let div = document.createElement('div');
+        div.className = "msg";
+        div.innerHTML = `<img src="${d.a}" class="pfp">
+            <div class="bubble">
+                <span style="font-size:9px; color:var(--gold)">[${d.title}]</span> <b style="color:${d.c}; font-size:11px;">${d.u}</b><br>
+                <span>${d.t}</span>
+            </div>`;
+        area.appendChild(div);
+        area.scrollTop = area.scrollHeight;
+    });
+
+    function updateP(input) {
+        if(input.files[0]) {
+            let r = new FileReader();
+            r.onload = e => { me.avatar = e.target.result; document.getElementById('me-pfp').src = e.target.result; };
+            r.readAsDataURL(input.files[0]);
+        }
+    }
+
+    updateStats();
+</script>
+</body>
+</html>
